WIP more visible grep results

--- a/.config/git/config
+++ b/.config/git/config
@@ -404,7 +404,7 @@
 
 [color "grep"]
     filename = white black
-    match = white bold
+    match = yellow bold
     separator = cyan black
 
 [commit]
