--- a/.ssh/config
+++ b/.ssh/config
@@ -43,3 +43,9 @@ Host aws-organizer
     HostName ec2-18-156-21-208.eu-central-1.compute.amazonaws.com
     ForwardAgent yes
     User ubuntu
+# this file should be included at the beginning of ~/.ssh/config
+IdentityFile ~/.ssh/keys/jan@jw-t430s_1
+
+Host jw-t430s.local
+    HostName jw-t430s.local
+    User jan
